L<names()|Badger::Factory/names()> methods along with their corresponding 
package variable magic.

Added the L<debugf()|Badger::Debug/debugf()> and 
L<debug_at()|Badger::Debug/debug_at()> methods to 
L<Badger::Debug>.

Added the L<alias()|Badger::Class/alias()> method to 
L<Badger::Class>.

Added the L<auto_can()|Badger::Class::Methods/auto_can()> method to 
L<Badger::Class::Methods>.

Added the L<Badger::Codec::HTML> module which defines the C<html> codec. 

Changed the L<throw()|Badger::Base/throw()> method in L<Badger::Base> to
pass the exception type to L<exception()|Badger::Base/exception()>.

Changed the L<try()|Badger::Base/try()> method in L<Badger::Base> to
preserve the list/scalar calling context and to handle false but defined
values.

Cleaned up and generalised the L<Badger::Hub> module.  The Badger-specific
data has now been moved into L<Badger::Hub::Badger>.

=head2 Version 0.06

Added L<copy_file()|Badger::Filesystem/copy_file()> and
L<move_file()|Badger::Filesystem/move_file()> to L<Badger::Filesystem> and
L<copy()|Badger::Filesystem/copy()> and L<move()|Badger::Filesystem/move()>
methods to L<Badger::Filesystem::File>.

Added L<chmod_path()|Badger::Filesystem/chmod_path()> to L<Badger::Filesystem>
and L<chmod()|Badger::Filesystem::Path/chmod()> to L<Badger::Filesystem::Path>.

Added L<Bin()|Badger::Filesystem/Bin()> to L<Badger::Filesystem>.

Added the L<encoding()|Badger::Filesystem::File/encoding()> method to 
L<Badger::Filesystem::File> for specifying the encoding of a file, along
with the L<utf8()|Badger::Filesystem::File/utf8()>,
L<bytes()|Badger::Filesystem::File/bytes()>,
L<crlf()|Badger::Filesystem::File/crlf()> and 
L<raw()|Badger::Filesystem::File/raw()> methods for enabling different 
encoding layers.

Added the L<codec()|Badger::Filesystem::File/codec()> method to 
L<Badger::Filesystem::File> for specifying a serialisation codec to use in 
conjunction with the new  L<data()|Badger::Filesystem::File/data()> method.
